...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fivebyfive"
        android:onClick="onButtonClick"
        android:background="@drawable/border_button"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_below="@+id/fragment_bar_size_select"
        android:layout_centerHorizontal="true"
...
        android:background="@drawable/border_button"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tenbyten"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tenbyten"
...
