<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:layout_alignParentStart="true" />

    <Button
        android:text="Normal Puzzles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/normal_puzzles_button"
        android:onClick="onClicked"
        android:background="@drawable/border_button"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textAllCaps="false"
        android:layout_below="@+id/fragment_bar_puzzle_select"
...
