...
-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_main"
        android:id="@+id/settings_button_main"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onClick"
        android:elevation="0dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
...

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_button"
        android:onClick="onClick"
        android:id="@+id/play_button_main"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
...
