<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    tools:context=".BarFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back_bar"
        android:id="@+id/back_button_bar"
        android:layout_gravity="left"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/settings_bar"
        android:id="@+id/settings_button_bar"
        android:layout_gravity="right"
        style="?android:attr/borderlessButtonStyle" />
</FrameLayout>
